<resources>
    <string name="app_name">Chat App</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="welcome_to_aquatech">Welcome to AQUATECH</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="admin">Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_pump_s">Total Pump/s</string>
    <string name="_00000">00000</string>
    <string name="total_tank_s">Total Tank/s</string>
    <string name="total_household_s">Total Household/s</string>
    <string name="total_active">Total Active</string>
    <string name="total_disconnect">Total Disconnected</string>
    <string name="total_inactive">Total Inactive</string>
    <string name="unread_meter">Unread Meter</string>
    <string name="read_meter">Read Meter</string>
    <string name="search_serial_number">Search Serial Number</string>
    <string name="address">Address</string>
    <string name="consumer_s_details">Consumer\'s Details</string>
    <string name="account_number">Account Number :</string>
    <string name="contact_number">Contact Number :</string>
    <string name="meter_serial_number">Meter Serial Number :</string>
    <string name="tank_number">Tank Number :</string>
    <string name="pump_number">Pump Number :</string>
    <string name="line_number">Line Number :</string>
    <string name="meter_stand">Meter Stand :</string>
    <string name="date_applied">Date Applied :</string>
    <string name="previous_water_consumption">Previous Water Consumption :</string>
    <string name="balance_payment">Balance Payment :</string>
    <string name="this_is_your_bill">THIS IS YOUR BILL</string>
    <string name="bill_no">BILL NO :</string>
    <string name="meter_serial_no">Meter Serial No. :</string>
    <string name="details">DETAILS :</string>
    <string name="name_">Name :</string>
    <string name="anianne_moyen">Anianne Moyen</string>
    <string name="current_charges">Current Charges</string>
    <string name="address_">Address :</string>
    <string name="aurelio_alivio_sr_st_purok_5_cubacub_mandaue_city">Aurelio Alivio Sr. St.Purok 5, Cubacub Mandaue City</string>
    <string name="present_reading">Present Reading :</string>
    <string name="meter_reader">Meter Reader :</string>
    <string name="oliver_grave">Oliver Grave</string>
    <string name="previous_reading">Previous Reading :</string>
    <string name="billed_by">Billed by :</string>
    <string name="joseph_alivio">Joseph Alivio</string>
    <string name="water_consumed">Water Consumed :</string>
    <string name="this_month_s_bill">This Month\'s Bill :</string>
    <string name="billing_period">Billing Period :</string>
    <string name="jul_15_aug_15_22">Jul 15 - Aug 15, 22</string>
    <string name="other_charges">Other Charges</string>
    <string name="due_date">Due Date :</string>
    <string name="sept_3_2022">Sept. 3, 2022</string>
    <string name="previous_bill">Previous Bill :</string>
    <string name="date_delivered">Date Delivered :</string>
    <string name="penalty">Penalty :</string>
    <string name="total_previous">Total Previous :</string>
    <string name="reconnection_fee">Reconnection Fee :</string>
    <string name="total_bill">Total Bill :</string>
    <string name="_0_00">0.00</string>
    <string name="pay_this_amount_on_or_before_due_date_to_get_discount_and_avoid_penalty">Pay this amount on or before due date to get discount and avoid penalty.</string>
    <string name="_0123456">0123456</string>
    <string name="username">Username :</string>
    <string name="joseph123">Joseph123</string>
    <string name="cubacub">Cubacub</string>
    <string name="_09151709842">09151709842</string>
    <string name="jo_gmail_com">Jo@gmail.com</string>
    <string name="email_address">Email Address :</string>
    <string name="create_account">Create Account</string>
    <string name="change_password">Change Password</string>
    <string name="water_consumption">Water Consumption</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="_username">Username</string>
    <string name="contact_number_">Contact Number</string>
    <string name="meter_stand_">Meter Stand</string>
    <string name="line_number_">Line Number</string>
    <string name="pump_number_">Pump Number</string>
    <string name="tank_number_">Tank Number</string>
    <string name="water_meter_serial_number">Water Meter Serial Number</string>
    <string name="select_roles">Select Roles</string>
    <string name="roles">Roles</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="consumer">Consumer</string>
    <string name="meter_reader_">Meter Reader</string>
    <string name="water_consumption_">Water Consumption :</string>
    <string name="total_line_s">Total Line/s</string>
    <string name="submit">Submit</string>
    <string name="create_user_account">Create User Account</string>
    <string name="_000000">000000</string>
    <string name="household_s">Household/s</string>
    <string name="contact_number__">CONTACT NUMBER :</string>
    <string name="december_20_2023">December 20, 2023</string>
    <string name="billing_details">BILLING DETAILS</string>
    <string name="other_information">Other Information</string>
    <string name="send">Send</string>
    <string name="employee_id">EMPLOYEE ID :</string>
    <string name="emailalone">Email</string>
    <string name="preferred_bill_notification">Preferred Bill Notification :</string>
    <string name="sms">SMS</string>
    <string name="house_house_delivery">House-House Delivery</string>
    <string name="scan_the_meter">Scan The Meter</string>
    <string name="update_consumer_details">Update Consumer Details</string>
    <string name="first_meter_read">First Meter Read</string>
    <string name="first_meter_read_">First Meter Read :</string>
    <string name="others">Others :</string>
    <string name="discount">Discount :</string>
    <string name="credit">Credit :</string>
    <string-array name="Positions">
        <item>Consumer</item>
        <item>Meter Reader</item>
        <item>Admin</item>
    </string-array>
    <string-array name="spinnerYear">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
    </string-array>
    <string-array name="spinnerMonth">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="spinnerType">
        <item>Select Type</item>
        <item>Residential</item>
        <item>Commercial</item>
    </string-array>
</resources>