<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".activities.profileActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/background_water_drop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </View>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:background="@drawable/background_content_bottom_white"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Output -->
        <!-- Account Number -->
        <ImageView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_47sdp"
            android:background="@color/white"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/account_number"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextAccNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@null"
            android:text="@string/_0123456"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp" />
        <!-- Username -->
        <ImageView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_85sdp"
            android:background="@color/white"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/username"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@null"
            android:text="@string/joseph123"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp" />

        <!-- Address -->
        <TextView
            android:id="@+id/inputAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:background="@null"
            android:text="@string/cubacub"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp" />

        <ImageView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_123sdp"
            android:background="@color/white"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_90sdp"
            android:text="@string/address_"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <!-- Contact Number -->
        <TextView
            android:id="@+id/inputNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_140sdp"
            android:background="@null"
            android:text="@string/_09151709842"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp" />

        <ImageView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_164sdp"
            android:background="@color/white"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_130sdp"
            android:text="@string/contact_number"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <!-- Email Address -->
        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_180sdp"
            android:background="@null"
            android:text="@string/jo_gmail_com"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp" />

        <ImageView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_207sdp"
            android:background="@color/white"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_170sdp"
            android:text="@string/email_address"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

    </FrameLayout>

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toStartOf="@id/buttonCreateNewAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout" />

    <Button
        android:id="@+id/buttonCreateNewAccount"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="@string/create_new_account"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonChangePassword"
        app:layout_constraintTop_toBottomOf="@id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>