<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentEmpPage.CreateUserFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_content_bottom_white">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:clickable="true"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_23sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            android:tint="@color/primary_text" />

    <TextView
        android:id="@+id/textviewCreateUserAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_user_account"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_25ssp"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:gravity="center" />

    <Button
        android:id="@+id/buttonConsumer"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_60sdp"
        android:text="@string/consumer"
        android:textSize="@dimen/_15ssp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/buttonMeterReader"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_60sdp"
        android:text="@string/meter_reader_"
        android:textSize="@dimen/_15ssp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/buttonAdmin"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_60sdp"
        android:text="@string/admin"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="110dp"
        android:layout_gravity="center" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>